--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ chardet==5.2.0
 charset-normalizer==3.3.2
 click==8.1.7
 cookiecutter==2.6.0
-dj-database-url==2.2.0
 Django==5.0.7
 django-bootstrap5==24.2
 django-browser-reload==1.13.0
@@ -15,6 +14,7 @@ Jinja2==3.1.4
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+psycopg2==2.9.9
 psycopg2-binary==2.9.9
 Pygments==2.18.0
 python-dateutil==2.9.0.post0
